# PotionomicsSolver

./: Cargo.toml
input/: ingredients  ingredients.rs
src/: main.bak.rs  main.rs  utils.rs
