[package]
name = "PotionomicsSolver"
version = "0.1.0"
authors = ["Kellie Medlin <kellie.medlin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
regex = "1"
strum = "0.20"
strum_macros = "0.20"
lazy_static = "1.4.0"